--- a/appengine-modules-helloworld-python/app.yaml
+++ b/appengine-modules-helloworld-python/app.yaml
@@ -5,8 +5,8 @@ threadsafe: true
 builtins:
 - appstats: on
 
-automatic_scaling:
-  max_idle_instances: 20
+manual_scaling:
+  instances: 1
 
 handlers:
 - url: /favicon\.ico
